아침에 pull 안하고 작업 한거

--- a/team1/src/main/webapp/resources/assets/css/main.css
+++ b/team1/src/main/webapp/resources/assets/css/main.css
@@ -4430,7 +4430,7 @@
 
 		}
 		
-		#images {
-			width: 250em;
-			height: 150em;
-		}
+/* 		.images { */
+/* 			width: 250em; */
+/* 			height: 150em; */
+/* 		} */
