명소 수정시 명소수정 페이지 유지

--- a/team1/src/main/webapp/resources/assets/css/main.css
+++ b/team1/src/main/webapp/resources/assets/css/main.css
@@ -1670,6 +1670,12 @@
 
 		a:hover {
 			text-decoration: none;
+			color: red;
+			cursor : pointer;
+		}
+		
+		a:visited{
+			color : white;
 		}
 
 	strong, b {
